trunk/Archive2/ee/84517582b1c623/output
main.cpp:3:1: error: unknown type name 'class'
 class ABB
 ^
main.cpp:4:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 {
 ^
main.cpp:16:2: error: ISO C does not allow extra ';' outside of a function [-Wpedantic]
 };
  ^
main.cpp:18:9: error: expected '=', ',', ';', 'asm' or '__attribute__' before '<' token
 template<typename T>
         ^
main.cpp:30:9: error: expected '=', ',', ';', 'asm' or '__attribute__' before '<' token
 template<typename T>
         ^
